package seedu.unienable.model;

/** Fixed top-level categories every activity belongs to. */
public enum ActivityCategory {
    ACADEMIC,
    CCA,
    WORK_INTERNSHIP,
    OTHERS
}
