package seedu.unienable.model;

/** Tracks whether an activity has been completed. */
public enum CompletionStatus {
    INCOMPLETE,
    COMPLETE
}
