package seedu.unienable.model;

/** Distinguishes an activity with a confirmed start/end time from one with a flexible window. */
public enum ScheduleType {
    FIXED,
    FLEXIBLE
}
